# Superset_Factory

./: .gitignore  Docker-compose.yml  factories.py  objects.py  pyproject.toml
app/: app.py  factories.py  models.py
database/: Dockerfile  create_fixtures.sql
database/pgadmin/: Dockerfile
tests/: factory_test.py
